# nashguard

./: .gitignore  .mcp.json  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: architecture-design.md
nashguard/: __init__.py  __main__.py  config.py  main.py  models.py  orchestrator.py  server.py
nashguard/agents/: __init__.py  alpha.py  base.py  judge.py  risk.py
nashguard/mcp_client/: __init__.py  okx_mcp.py
nashguard/sandbox/: __init__.py  black_scholes.py  drb.py  monte_carlo.py
tests/: test_sandbox.py
